[package]
name = "cheminee"
version = "0.1.9"
edition = "2021"
description = "Molecule indexing and search"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
clap = "4"
eyre = "0"
lazy_static = "1.4"
log = "0"
poem =  { version="1", features=["test"] }
poem-openapi = { version="2", features=["swagger-ui"] }
poem-openapi-derive = "2"
rand = "0.8.5"
rayon = "1"
rdkit = "0.3.1"
#rdkit = {path="../rdkit"}
regex = "1"
reqwest = "0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tantivy = "0.20.2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempdir = "0"
