[package]
name = "cheminee"
version = "0.1.40"
edition = "2021"
description = "Molecule indexing and search"
license = "MIT"
documentation = "https://github.com/rdkit-rs/cheminee"
repository = "https://github.com/rdkit-rs/cheminee"
homepage = "https://rdkit-rs.github.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
cheminee-similarity-model = { version = "0.1", path = "../cheminee-similarity-model" }
clap = "4"
eyre = "0"
lazy_static = "1.4"
prometheus = "0"
log = "0"
poem = { version = "1", features = ["test", "prometheus"] }
poem-openapi = { version = "2", features = ["swagger-ui"] }
poem-openapi-derive = "2"
rand = "0.8.5"
rayon = "1"
rdkit = { version = "0.4.11" }
regex = "1"
reqwest = "0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tantivy = "0.22"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd-sys = "=2.0.9"

[dev-dependencies]
tempdir = "0"
